# sfinfo-haskell

./: .gitreview  .hlint.yaml  .zuul.yaml  README.md  cabal.project  project.config  sfinfo.cabal  stack.yaml
app/: Main.hs
src/: Sfinfo.hs
src/Sfinfo/: Cloner.hs  Data.hs  PipNames.hs  RpmSpec.hs  Yaml.hs
test/: RpmSpec.hs  Spec.hs
test/data/: python-APScheduler.spec.original  python-APScheduler.spec.updated  resources.yaml.original  resources.yaml.updated
