cabal-version:       2.4
name:                sfinfo
version:             0.0.0.0
synopsis:            Software Factory Release Tools
description:
    Software Factory Release Tools.
    See README.md for more details.
license:             Apache-2.0
license-file:        LICENSE
author:              Software Factory Dev
maintainer:          Software Factory Dev <softwarefactory-dev@redhat.com>
copyright:           2020 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5

common common-options
  build-depends:       base
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -- Let's keep unused imports around as documentation purpose
                       -Wno-unused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , LambdaCase
                     , NumericUnderscores
  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       HsYAML                 < 0.3.0.0
                     , aeson                  >= 1.0.0.0  && < 1.6
                     , ansi-wl-pprint         < 0.7.0
                     , bytestring             < 0.11
                     , containers             < 0.7
                     , cryptonite             < 0.28
                     , directory              >= 1.3.0.0  && < 1.4
                     , network-uri            < 2.7.0.0
                     , simple-cmd             < 0.3.0
                     , text                   >= 0.11.1.0 && < 1.3
                     , time                   < 2.0.0
                     , turtle                 < 1.6
                     , versions               < 4.1.0
                     , yaml                   < 0.12.0.0
                     -- Extra dep
                     , pkgtreediff            < 0.6.0
                     -- Internal dep
                     , gerrit
                     , podman
                     , zuul
                     , pypi

  hs-source-dirs:      src
  exposed-modules:     Sfinfo
                     , Sfinfo.Cloner
                     , Sfinfo.PipNames
                     , Sfinfo.RpmSpec
                     , Sfinfo.Data
                     , Sfinfo.Yaml

executable sfinfo
  import:              common-options
  build-depends:       turtle                     < 1.6
                     , gerrit
                     , text                       >= 0.11.1.0 && < 1.3
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       sfinfo
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite sfinfo-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             RpmSpec.hs
  build-depends:       bytestring                 < 0.11
                     , sfinfo
                     , tasty                      >= 0.11.2   && < 1.5
                     , tasty-hunit                >= 0.10     && < 0.11
                     , text                       >= 0.11.1.0 && < 1.3
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite sfinfo-doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       doctest < 2.0
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
